# astroid-core

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: preprocessor.cmake
disabled/unit_tests/geometry/: polygonal.cpp
disabled/unit_tests/imaging/: isobands.cpp  merge_slices.cpp
scripts/: apply-code-styling.sh
src/astroid/: allocators.hpp  anonymous.hpp  array.hpp  c_array.hpp  common.hpp  date_time.cpp  date_time.h  date_time.hpp  encoding.cpp  encoding.hpp  endian.cpp  endian.hpp  immutable.hpp  preprocessed.h  release.hpp  shared_memory.hpp  simple_concurrency.cpp  simple_concurrency.hpp  system.cpp  system.hpp  test.hpp  units.hpp
src/astroid/geometry/: adaptive_grid.cpp  adaptive_grid.hpp  angle.hpp  bin_collection.hpp  clipper.cpp  clipper.hpp  common.cpp  common.hpp  decode_matrix.hpp  decode_matrix.ipp  distance.cpp  distance.hpp  distance.ipp  forward.hpp  grid_points.hpp  intersection.hpp  intersection.ipp  line_strip.cpp  line_strip.hpp  meshing.cpp  meshing.hpp  multiple_source_view.cpp  multiple_source_view.hpp  polygonal.cpp  polygonal.hpp  regular_grid.cpp  regular_grid.hpp  scenes.hpp  slicing.cpp  slicing.hpp  transformations.hpp
src/astroid/imaging/: api.hpp  apply_palette.hpp  binary_ops.hpp  binary_ops.ipp  blend.hpp  bounds.hpp  channel.hpp  color.cpp  color.hpp  color_map.hpp  color_map.ipp  contiguous.hpp  discretize.hpp  discretize.ipp  foreach.hpp  forward.hpp  geometry.hpp  gradient.hpp  histogram.hpp  histogram.ipp  histogram_equalize.hpp  image.cpp  image.hpp  inclusion_image.cpp  inclusion_image.hpp  integral.hpp  integral.ipp  isobands.cpp  isobands.hpp  isobands.ipp  isolines.cpp  isolines.hpp  isolines.ipp  iterator.hpp  level_window.cpp  level_window.hpp  level_window.ipp  merge_slices.hpp  merge_slices.ipp  sample.hpp  (+16 more)
src/astroid/io/: compression.cpp  compression.hpp  crc.cpp  crc.hpp  file.cpp  file.hpp  forward.hpp  msgpack.hpp  raw_memory_io.cpp  raw_memory_io.hpp  text_parser.cpp  text_parser.hpp
src/astroid/math/: common.cpp  common.hpp  interpolate.cpp  interpolate.hpp
src/cradle/: anonymous.hpp  api.cpp  api.hpp  common.cpp  common.hpp  composition_cache.hpp  date_time.cpp  date_time.hpp  diff.cpp  diff.hpp  encoding.cpp  encoding.hpp  endian.cpp  endian.hpp  release.hpp  system.cpp  system.hpp  test.cpp  test.hpp  units.hpp
src/cradle/geometry/: adaptive_grid.hpp  angle.hpp  bin_collection.hpp  clipper.cpp  clipper.hpp  common.cpp  common.hpp  decode_matrix.hpp  decode_matrix.ipp  distance.cpp  distance.hpp  distance.ipp  forward.hpp  grid_points.hpp  intersection.hpp  intersection.ipp  line_strip.cpp  line_strip.hpp  meshing.cpp  meshing.hpp  multiple_source_view.cpp  multiple_source_view.hpp  polygonal.cpp  polygonal.hpp  regular_grid.cpp  regular_grid.hpp  scenes.hpp  slicing.cpp  slicing.hpp  transformations.hpp
src/cradle/imaging/: api.hpp  apply_palette.hpp  binary_ops.hpp  binary_ops.ipp  blend.hpp  bounds.hpp  channel.hpp  color.cpp  color.hpp  color_map.hpp  color_map.ipp  contiguous.hpp  discretize.hpp  discretize.ipp  foreach.hpp  forward.hpp  geometry.hpp  gradient.hpp  histogram.hpp  histogram.ipp  histogram_equalize.hpp  image.cpp  image.hpp  integral.hpp  integral.ipp  isobands.cpp  isobands.hpp  isobands.ipp  isolines.cpp  isolines.hpp  isolines.ipp  iterator.hpp  level_window.cpp  level_window.hpp  level_window.ipp  merge_slices.hpp  merge_slices.ipp  sample.hpp  sample.ipp  shrink.cpp  (+14 more)
src/cradle/io/: calc_messages.cpp  calc_messages.hpp  calc_provider.cpp  calc_provider.hpp  compression.cpp  compression.hpp  crc.cpp  crc.hpp  file.cpp  file.hpp  forward.hpp  generic_io.cpp  generic_io.hpp  msgpack_io.hpp  raw_memory_io.cpp  raw_memory_io.hpp  tcp_messaging.hpp  text_parser.cpp  text_parser.hpp
src/cradle/math/: common.cpp  common.hpp  fixed.hpp  interpolate.cpp  interpolate.hpp
unit_tests/: CMakeLists.txt  common.cpp  date_time.cpp  encoding.cpp  endian.cpp  runner.cpp
unit_tests/geometry/: angle.cpp  bounding_box.cpp  common.cpp  decode_matrix.cpp  distance.cpp  intersection.cpp  line_strip.cpp  regular_grid.cpp  transformations.cpp
unit_tests/imaging/: api.cpp  apply_palette.cpp  bounds.cpp  difference.cpp  discretize.cpp  geometry.cpp  histogram.cpp  histogram_equalize.cpp  integral.cpp  isolines.cpp  level_window.cpp  sample.cpp  slicing.cpp  statistics.cpp  variant.cpp  view_transforms.cpp  weighting.cpp
unit_tests/io/: compression.cpp  generic_io.cpp
unit_tests/math/: common.cpp  interpolate.cpp
